test/test_examples/syntactic_examples/syntax_error/error_statement_06.zig
// Syntax error: missing semicolon after function call

const ifj = @import("ifj24.zig"); 

pub fn main() void {
    foo(10, 15) 
}